fix the images so they are cropped properly

--- a/src/app.scss
+++ b/src/app.scss
@@ -27,22 +27,22 @@ h1 {
 
 h2 {
   font-size: 1.953em;
-    @media (min-width: 22em) {
+    @media (min-width: 22rem) {
     font-size: 2.441em;
   }
 }
 
 footer h2 {
-  font-size: 1.563em;
-    @media (min-width: 22em) {
+  font-size: 1rem;
+    @media (min-width: 30rem) {
     font-size: 2.441em;
   }
 }
 
 h3 {
-  font-size: 1.563em;
-   @media (min-width: 22em) {
-    font-size: 1.953em;
+  font-size: 1rem;
+  @media (min-width: 30rem) {
+    font-size: 1.953rem;
   }
 }
 
@@ -65,7 +65,7 @@ ul {
   line-height: 2em;
 }
 
-quote {
+blockquote {
   font-style: italic;
 }
 
@@ -85,7 +85,7 @@ z-3 {
   display: block;
 }
 
-.mt-1 {
+.mt-1 { // well this is dumb
   margin-top: 1.5em;
 }
 
@@ -151,8 +151,23 @@ header {
   grid-row: 1;
 }
 
+header {
+  margin-top:-5em;
+  overflow:hidden
+}
+
 header picture {
   min-height: 20em; // hack to fix small size the logo getting hidden
+  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10rem), 0 calc(100% - 5rem));
+  animation-timing-function: ease;
+}
+
+footer {
+  clip-path: polygon(0 5rem, 100% 0, 100% 100%, 0 100%);
+  
+  picture {
+    animation-timing-function: ease;
+  }
 }
 
 .header-logo {
@@ -180,6 +195,7 @@ header picture {
 
 .io-parallax {
   animation-timing-function: ease;
+  clip-path: polygon(0 5rem, 100% 0, 100% calc(100% - 10rem), 0 calc(100% - 5rem))
 }
 
 #services {
@@ -222,7 +238,7 @@ header picture {
 }
 
 .service h3, .service .icon, .service p, .service .multi-p,
-.testimonial p, .testimonial quote {
+.testimonial p, .testimonial blockquote {
   grid-column: 1;
   padding-left: 1em;
   padding-right: 1em;
@@ -247,7 +263,7 @@ header picture {
 }
 
 .service h3,
-.testimonial quote {
+.testimonial blockquote {
   grid-row: 2;
 }
 
@@ -260,7 +276,7 @@ header picture {
   margin-top: 3em;
 }
 
-.testimonial quote {
+.testimonial blockquote {
   margin-bottom: 3em;
 }
 
@@ -275,16 +291,13 @@ header picture {
   justify-self: stretch;
 }
 
-footer picture {
-  min-height: 30em; // hack to make sure the image is always behind the text
-}
-
 .footer-img {
   background: black;
   z-index: -2; // get behind the full width img
 }
 
 .footer-text {
+  margin-top: 5rem;
   align-self: center;
   justify-self: center;
   text-align: center;
@@ -297,4 +310,3 @@ footer picture {
   opacity: 0.5;
   background: #000;
 }
-
